@@ -5,7 +5,9 @@
   also improves debugging/tracebacks, as a side effect
   popen-gateway startup can be substantially faster (>30%)
 
-- fix group.terminate() termination to work (more reliably)
+- refine internal gateway exit/termination procedure
+  and introduce group.terminate(timeout) for timely
+  termination. 
 
 - EOFError on channel.receive/waitclose if the other
   side unexpectedly went away.  When a gateway exits 
